<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B2B2B"
    tools:context=".LoginActivity">

    <!-- Logo at the top right corner -->
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:src="@drawable/christlogo"
        android:contentDescription="@string/app_name" />

    <!-- Logo Image Center -->
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/cugate" />

    <!-- Sign In Text -->
    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in_to_nmanage_and_track_your_visitors"
        android:textAlignment="center"
        android:textColor="#B8B8B8"
        android:textSize="16sp" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_sign_in"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:background="@drawable/input_background_selector"
        android:drawableStart="@drawable/baseline_input_24"
        android:hint="User ID"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#B8B8B8" />

    <!-- Password Input -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="40dp"
        android:autofillHints=""
        android:background="@drawable/input_background_selector"
        android:drawableStart="@drawable/baseline_password_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#B8B8B8" />

    <!-- Login Button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />



</RelativeLayout>
